--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="webstie"/>
     <meta property="og:description" content="덕질엔 끝이 없다, 취향따라 만나는 커뮤니티"/>
 
-    <title>Runner-be</title>
+    <title>DUCKIE</title>
 
     <style>
         body {
