--- a/quack/pr.html
+++ b/quack/pr.html
@@ -1,1 +1,1 @@
-<script type="text/javascript"> location.href = 'https://github.com/sungbinland/duckie-quack-quack/pulls' </script>
+<script type="text/javascript"> location.href = 'https://github.com/sungbinland/duckie-quack-quack/pulls?q=is%3Apr+is%3Aclosed+label%3AUI' </script>
