--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="center">
         <a style="font-family: 'Fredoka One', cursive; font-size:5em;  color: #ff8300; text-shadow: 2px 2px 4px #C0AC75; text-decoration: none;"
-           href="https://github.com/sungbinland/duckie-android" target="_blank">DUCKIE</a>
+           href="https://github.com/duckie-team" target="_blank">준비중</a>
     </div>
 </div>
 </body>
